Refactoring + build native image for mysql and postgresql